tests/rename/should_fail/T18740b.hs
{-# LANGUAGE ScopedTypeVariables #-}
module T18740b where

import Data.Proxy

f (Proxy :: Proxy a) = a
